Updated rotary logo, increased prices, fixed alignment

--- a/frontend/src/styles/committees.css
+++ b/frontend/src/styles/committees.css
@@ -310,6 +310,7 @@ p {
     &>a>p {
         margin-left: auto;
         margin-right: auto;
+        text-align: center;
     }
 }
 
@@ -420,6 +421,10 @@ p {
     & > h2 {
         z-index: 3;
     }
+}
+
+.comm-x-desc {
+    font-size: 2.5vh !important;
 }
 
 
