--- a/frontend/src/styles/secretariat.css
+++ b/frontend/src/styles/secretariat.css
@@ -84,6 +84,8 @@
 
     height: fit-content;
 
+    position: relative;
+
     & > .image-placeholder-2 {
         width: 95%;
         margin: 0 2.5%;
@@ -98,6 +100,37 @@
 
     &:first-child {
         grid-column: 2 / 4;
+    }
+
+    &:nth-child(4), &:nth-child(5) {
+        & > h1 {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+
+            text-align: center;
+            font-size: 4vh;
+            line-height: 4vh;
+        }
+
+        & > img {
+            position: absolute;
+
+            top: 12vh;
+            left: 0;
+        }
+
+        & > p {
+            position: absolute;
+
+            bottom: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &:nth-child(4) {
@@ -123,6 +156,14 @@
     }
 
     .oc-card h1 {
-        font-size: 2.5vh;
+        font-size: 2.5vh !important;
+    }
+
+    .oc-card:nth-child(4), .oc-card:nth-child(5) {
+        height: 100%;
+
+        & > img {
+            top: 9vh;
+        }
     }
 }
